add all routes for authentication

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -25,10 +25,10 @@
       <div class="input-field">
         <input type="password" placeholder="Password" name = "fpassword">
     <div class="action">
-      <button type = "submit" formaction="{{ url_for('login_submit')}}">Log in</button>
+      <button type = "submit" formaction="{{ url_for('logint')}}">Log in</button>
     </div>
     <div class="action">
-      <button type = "submit" formaction="{{ url_for('signup_submit')}}">Sign Up</button>
+      <button type = "submit" formaction="{{ url_for('signup')}}">Sign Up</button>
     </div>
   </form>
 </div>
