--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -25,7 +25,7 @@
       <div class="input-field">
         <input type="password" placeholder="Password" name = "fpassword">
     <div class="action">
-      <button type = "submit" formaction="{{ url_for('logint')}}">Log in</button>
+      <button type = "submit" formaction="{{ url_for('login')}}">Log in</button>
     </div>
     <div class="action">
       <button type = "submit" formaction="{{ url_for('signup')}}">Sign Up</button>
