--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -4,13 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Moderator Log-in</title>
+  <title>Login</title>
   <link
   rel="stylesheet"
-  href="../static/css/moderator_login.css"
-  href="{{ url_for('static', filename='css/moderator_login.css') }}"
+  href="../static/css/login.css"
+  href="{{ url_for('static', filename='css/login.css') }}"
   >
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abel">
 
 </head>
 <body>
