--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,3 +1,5 @@
+{% extends 'wrapper.html' %}
+{% block container %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,11 +8,8 @@
         <title></title>
         <link rel="stylesheet" href="../static/css/styles.css"/>
     </head>
-
     <body>
-        <section class="content">
-            {% block container %}
-            {% endblock %}
-        </section>
     </body>
 </html> 
+
+{% endblock %}
