--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,6 +9,10 @@
         <link rel="stylesheet" href="../static/css/styles.css"/>
     </head>
     <body>
+        <section class="content">
+            {% block container %}
+            {% endblock %}
+        </section>
     </body>
 </html> 
 
