--- a/app/templates/wrapper.html
+++ b/app/templates/wrapper.html
@@ -10,6 +10,7 @@
       href="{{ url_for('static', filename='css/wrapper.css') }}"
     />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abel">
   </head>
   <body>
@@ -17,14 +18,15 @@
       <header>
         <nav>
           <div class="padded">
-            <div class="nav-content">
               <a class="nav-link" href="{{ url_for('home')}}">
                 <h1>Bookshares</h1>
               </a>
-              <a class="nav-link" href="{{ url_for('logout')}}">
-                <span class="material-symbols-outlined nav-icon">login</span>
+              <a class="nav-link" href="{{ url_for('display_account')}}">
+                <span class="material-symbols-outlined nav-icon">person</span>
               </a>
-            </div>
+              <a class="nav-link" href="{{ url_for('logout')}}">
+                <span class="material-symbols-outlined nav-icon">logout</span>
+              </a>
           </div>
         </nav>
       </header>
