--- a/app/templates/add_book.html
+++ b/app/templates/add_book.html
@@ -11,6 +11,29 @@
     <body>
         <form method="POST">
             <h1>Add Book to Sell</h1> 
+            <h2>Book Information</h2> 
+            <h3>Title</h3>
+            <input type="text" placeholder="Title" name ="ftitle">
+            <h3>Publisher</h3>
+            <input type="text" placeholder="Publisher" name ="fpublisher">
+            <h3>Edition</h3>
+            <input type="text" placeholder="Edition" name ="fedition">
+            <h3>Condition</h3>
+            <select name="fcondition" id="fconditon">
+                <option value="New">New</option>
+                <option value="Lightly Used">Lightly Used</option>
+                <option value="Lightly Used">Heavliy Used</option>
+                <option value="Lightly Used">Damaged</option>
+             </select>
+            
+            <h2>Price Information</h2>
+            <h3> Price</h3>
+            <p>$</p> <input type="number" step="0.05" name="fprice">
+            
+            <h3>Upload Images</h3>
+            <input type= "file" id="book_image" name="filename">
+            <button type = "submit" formaction="{{ url_for('add_book')}}">Submit</button>
+
     </body>
 </html> 
 
