--- a/app/templates/book_to_swap.html
+++ b/app/templates/book_to_swap.html
@@ -1,15 +1,12 @@
-{% extends 'index.html' %}
+{% extends 'wrapper.html' %}
 {% block container %}
 <h1>Choose Book to Swap</h1>
 {% for book in books %}
 <div class="selectBook">
-     <a href="{{ url_for('send_swap', bookid=book.id)}}">
-         <h3">{{book.name}}</h3>
+     <a href="{{ url_for('send_swap', bookid=book._id)}}">
+         <h3>{{book.title}}</h3>
      </a>
         <!--<img class="cover" src="{{book.url}}"/>-->
 </div>
 {% endfor %}
-
-
-
 {% endblock %}
