--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -11,7 +11,7 @@
         <section class="content">
             <div class="grid-container">
                 {% for doc in docs %}
-                <div class="grid-item"><a href="/">{{doc.title}}</a></div>
+                <div class="grid-item"><a href="{{ url_for('for_sale', bookid=doc._id)}}">{{doc.title}}</a></div>
                 {%endfor%}
             </div>
         </section>
