--- a/app/templates/wrapper.html
+++ b/app/templates/wrapper.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abel">
   </head>
+  
   <body>
     <div class="container">
       <header>
@@ -30,6 +31,9 @@
           </div>
         </nav>
       </header>
-      <main>{% block container %} {% endblock %}</main>
+    </div>
+    <main>
+      {% block container %} {% endblock %}
+    </main>
   </body>
 </html>
