--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -37,6 +37,7 @@
             <h2 id="booksForSaleTitle">Books for sale</h2>
             <div class="grid-container">
                 {% for doc in docs %}
+                <img src = "data:image/png;base64, {{doc.image_base64}}" width="500" height="500" />
                 <div class="grid-item"><a href="/">{{doc.title}}</a></div>
                 {%endfor%}
             </div>
