--- a/app/templates/add_book.html
+++ b/app/templates/add_book.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="../static/css/styles.css"/>
     </head>
     <body>
-        <form method="POST">
+        <form method="POST" enctype = "multipart/form-data">
             <h1>Add Book to Sell</h1> 
             <h2>Book Information</h2> 
             <h3>Title</h3>
@@ -28,10 +28,10 @@
             
             <h2>Price Information</h2>
             <h3> Price</h3>
-            <p>$</p> <input type="number" step="0.05" name="fprice">
+            <p>$</p> <input type="number" step="0.5" name="fprice">
             
             <h3>Upload Images</h3>
-            <input type= "file" id="book_image" name="filename">
+            <input type="file" accept="image/png,image/jpeg,image/jpg" id="book_image" name="file">
             <button type = "submit" formaction="{{ url_for('add_book')}}">Submit</button>
 
     </body>
