--- a/app/templates/wrapper.html
+++ b/app/templates/wrapper.html
@@ -4,6 +4,8 @@
     <title>Bookshare</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    {% block css %}
+    {% endblock %}
     <link
       rel="stylesheet"
       href="../static/css/wrapper.css"
