add timestamp for chat

--- a/app/templates/chat.html
+++ b/app/templates/chat.html
@@ -23,15 +23,22 @@
                 </div>
                 <!-- type message&send -->
                 <div id="input-chat">
-                    <input type="text" id="user_message" placeholder="Message here..." autocomplete="off">
-                    <button type="button" id="send_message">SEND</button>
+                    <input type="text" id="user-msg" placeholder="Message here..." autocomplete="off">
+                    <button type="button" id="send-msg">SEND</button>
                 </div>
             </div>
         </div>
 
+        <!-- get username -->
+        <script type="text/javascript">
+            const username = `{{ username|e }}`;
+        </script>
+
+
+
         <!-- socketio scriptjs -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js" integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA==" crossorigin="anonymous"></script>
         <!-- chat socketio custom script -->
-        <script src="{{url_for('static', filename ='js/chat.js')}}"></script>
+        <script src="../static/chat.js"></script>
     </body>
 </html>
