--- a/app/templates/swap_requests.html
+++ b/app/templates/swap_requests.html
@@ -4,7 +4,7 @@
 <h1>Swap Requests</h1>
 {% for req in swapreqs %}
 <div>
-    <a href="/">
+    <a href="{{ url_for('view_swap', mybookid=req.b1._id, swapreqid=req.b2._id)}}">
          <h3>{{req.b1.title}} / {{req.b2.title}}</h3>
     </a>
 </div>
