--- a/app/templates/chat.html
+++ b/app/templates/chat.html
@@ -10,10 +10,13 @@
         </nav>
 
         <div id="main">
-            <!-- Select Chat room -->
+            <!-- Select Chat room
             <nav id="rooms">
-            
-            </nav>
+                <h4>ROOMS</h4>
+                {% for room in rooms %}
+                    <p class="select-room">{{ room|title }}</p>
+                {% endfor %} -->
+            <!-- </nav> -->
 
             <!-- right side area -->
             <div id="rightside">
@@ -33,9 +36,7 @@
         <script type="text/javascript">
             const username = `{{ username|e }}`;
         </script>
-
-
-
+        
         <!-- socketio scriptjs -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js" integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA==" crossorigin="anonymous"></script>
         <!-- chat socketio custom script -->
