view images on swap pages

--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -32,6 +32,16 @@
                         View Chat
                     </button>
                 </form>
+                <br />
+                <form>
+                    <button
+                        type="submit"
+                        formaction="{{ url_for('view_swap_requests')}}"
+                        class="block"
+                    >
+                        View Swap Requests
+                    </button>
+                </form>
             </div>
             <br />
             <h2 id="booksForSaleTitle">Books for sale</h2>
