--- a/app/templates/book_for_sale.html
+++ b/app/templates/book_for_sale.html
@@ -2,7 +2,7 @@
 {% block container %}
 
 <div class="bookInfo">
-    <img alt="Photo of Book">
+    <img src = "data:image/png;base64, {{book.image_base64}}" width="500" height="500" />
     <h2>${{book.price}}</h2>
     <div class="bookDetails">
         <h2>Book Info:</h2>
