--- a/app/templates/view_swap.html
+++ b/app/templates/view_swap.html
@@ -2,7 +2,7 @@
 {% block container %}
 
 <div class="bookInfo">
-    <img alt="Photo of Book">
+    <img src = "data:image/png;base64, {{mybook.image_base64}}" width="500" height="500" />
     <h2>${{mybook.price}}</h2>
     <div class="bookDetails">
         <h2>Book Info:</h2>
@@ -13,7 +13,7 @@
     </div>
 </div>
 <div class="bookInfo">
-    <img alt="Photo of Book">
+    <img src = "data:image/png;base64, {{swapreq.image_base64}}" width="500" height="500" />
     <h2>${{swapreq.price}}</h2>
     <div class="bookDetails">
         <h2>Book Info:</h2>
@@ -23,13 +23,15 @@
         <h3>Condition: {{swapreq.condition}}</h3>
     </div>
 </div>
+<!--
 <div>
     <form id="approverequest" method="POST">
         <input type="submit" name="fapprove" value="Approve">
     </form>
     <form id="declinerequest" method="POST">
-        <input type="submit" name="fdeny" value="Deny">
+        <input type="submit" name="fdecline" value="Decline">
     </form>
 </div>
+-->
 
 {% endblock %}
