basic search works

--- a/app/templates/add_book.html
+++ b/app/templates/add_book.html
@@ -11,7 +11,7 @@
 
 {% block container %}
 
-<form method="POST">
+<form method="POST" enctype="multipart/form-data">
     <h1>Add Book to Sell</h1> 
     <h2>Book Information</h2> 
     <h3>Title</h3>
