added comments and renamed variables to be more consistent

--- a/app/templates/swap_requests.html
+++ b/app/templates/swap_requests.html
@@ -4,11 +4,11 @@
 <h1>Swap Requests</h1>
 {% for req in swapreqs %}
 <div>
-    <a href="{{ url_for('view_swap', mybookid=req.b1._id, swapreqid=req.b2._id)}}">
-         <h3>{{req.b1.title}} / {{req.b2.title}}</h3>
+    <a href="{{ url_for('view_swap', mybookid=req.mybook._id, otherbookid=req.otherbook._id)}}">
+         <h3>{{req.mybook.title}} / {{req.otherbook.title}}</h3>
     </a>
-    <img src = "data:image/png;base64, {{req.b1.image_base64}}" width="500" height="500" />
-    <img src = "data:image/png;base64, {{req.b2.image_base64}}" width="500" height="500" />
+    <img src = "data:image/png;base64, {{req.mybook.image_base64}}" width="500" height="500" />
+    <img src = "data:image/png;base64, {{req.otherbook.image_base64}}" width="500" height="500" />
 </div>
 
 {% endfor %}
