--- a/app/templates/view_swap.html
+++ b/app/templates/view_swap.html
@@ -13,14 +13,14 @@
     </div>
 </div>
 <div class="bookInfo">
-    <img src = "data:image/png;base64, {{swapreq.image_base64}}" width="500" height="500" />
-    <h2>${{swapreq.price}}</h2>
+    <img src = "data:image/png;base64, {{otherbook.image_base64}}" width="500" height="500" />
+    <h2>${{otherbook.price}}</h2>
     <div class="bookDetails">
         <h2>Book Info:</h2>
-        <h3>Title: {{swapreq.title}}</h3>
-        <h3>Edition: {{swapreq.edition}}</h3>
-        <h3>Publisher: {{swapreq.publisher}}</h3>
-        <h3>Condition: {{swapreq.condition}}</h3>
+        <h3>Title: {{otherbook.title}}</h3>
+        <h3>Edition: {{otherbook.edition}}</h3>
+        <h3>Publisher: {{otherbook.publisher}}</h3>
+        <h3>Condition: {{otherbook.condition}}</h3>
     </div>
 </div>
 <!--
