--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -30,7 +30,9 @@
     <h2 id="booksForSaleTitle">Books for sale</h2>
     <div class="grid-container">
         {% for doc in docs %}
-        <div class="grid-item"><a href="/">{{doc.title}}</a></div>
+        <div class="grid-item">
+            <a href="{{ url_for('for_sale',bookid=doc._id)}}">{{doc.title}}</a>
+        </div>
         {%endfor%}
     </div>
 </div>
