--- a/app/templates/book_info.html
+++ b/app/templates/book_info.html
@@ -11,10 +11,12 @@
         <h3>Publisher: {{book.publisher}}</h3>
         <h3>Condition: {{book.condition}}</h3>
     </div>
-    <!--current user's book-->
-        <!--<form id="requestswap" method="POST">
+    <!--choose this book to swap-->
+    <div>
+        <form id="requestswap" method="POST">
             <input type="submit" name="request" value="Request to Swap">
-        </form>-->
+        </form>
+    </div>
 </div>
 
 {% endblock %}
