--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -38,7 +38,7 @@
 <!-- Everyone else's books -->
 <div class="grid-container">
     {% for doc in docs %}
-    <div class="grid-item"><a href="/">{{doc.title}}</a></div>
+    <div class="grid-item"><a href="{{ url_for('book_info',bookid=doc._id)}}">{{doc.title}}</a></div>
     {%endfor%}
 </div>
 
