--- a/app/templates/book_for_sale.html
+++ b/app/templates/book_for_sale.html
@@ -2,7 +2,7 @@
 {% block container %}
 
 <div class="bookInfo">
-    <img src = "data:image/png;base64, {{book.image_base64}}" width="500" height="500" />
+    <img src="data:image/png;base64, {{book.image_base64}}" width="500" height="500" />
     <h2>${{book.price}}</h2>
     <div class="bookDetails">
         <h2>Book Info:</h2>
@@ -11,10 +11,18 @@
         <h3>Publisher: {{book.publisher}}</h3>
         <h3>Condition: {{book.condition}}</h3>
     </div>
+    {% if is_owner %}
+    <button type="button" formaction="{{ url_for('delete_book')}}">
+        Delete Book Listing
+    </button>
+    <button type="button" formaction="{{ url_for('edit_book', )}}">
+        Edit Book Listing
+    </button>
+    {% endif %}
     <!--choose this book to swap-->
-        <form id="requestswap" method="POST">
-            <input type="submit" name="request" value="Request to Swap">
-        </form>
+    <form id="requestswap" method="POST">
+        <input type="submit" name="request" value="Request to Swap">
+    </form>
 </div>
 
 {% endblock %}
