--- a/app/templates/book_for_sale.html
+++ b/app/templates/book_for_sale.html
@@ -12,12 +12,10 @@
         <h3>Condition: {{book.condition}}</h3>
     </div>
     {% if is_owner %}
-    <button type="button" formaction="{{ url_for('delete_book')}}">
-        Delete Book Listing
-    </button>
-    <button type="button" formaction="{{ url_for('edit_book', )}}">
-        Edit Book Listing
-    </button>
+    <form id="delbook" method="GET" action="{{ url_for('delete_book', bookid=book._id) }}">
+        <input type="submit" name="delbook" value="Delete Book Listing">
+    </form>
+
     {% endif %}
     <!--choose this book to swap-->
     <form id="requestswap" method="POST">
