complete edit functionality

--- a/app/templates/add_book.html
+++ b/app/templates/add_book.html
@@ -15,7 +15,8 @@
     <h1>Add Book to Sell</h1> 
     <h2>Book Information</h2> 
     <h3>Title</h3>
-    <input type="text" placeholder="Title" name ="ftitle">
+    <input type="text" placeholder="Title" name ="ftitle"
+    >
     <h3>Publisher</h3>
     <input type="text" placeholder="Publisher" name ="fpublisher">
     <h3>Edition</h3>
@@ -24,8 +25,8 @@
     <select name="fcondition" id="fconditon">
         <option value="New">New</option>
         <option value="Lightly Used">Lightly Used</option>
-        <option value="Lightly Used">Heavliy Used</option>
-        <option value="Lightly Used">Damaged</option>
+        <option value="Heavily Used">Heavily Used</option>
+        <option value="Damaged">Damaged</option>
     </select>
     
     <h2>Price Information</h2>
