--- a/app/templates/book_for_sale.html
+++ b/app/templates/book_for_sale.html
@@ -13,8 +13,12 @@
     </div>
     {% if is_owner %}
     <form id="delbook" method="GET" action="{{ url_for('delete_book', bookid=book._id) }}">
-        <input type="submit" name="delbook" value="Delete Book Listing">
+        <input type="submit" name="delbookbtn" value="Delete Book Listing">
     </form>
+    <form id="editbook" method="GET" action="{{ url_for('edit_book', bookid=book._id) }}">
+        <input type="submit" name="editbookbtn" value="Edit Book Listing">
+    </form>
+
 
     {% endif %}
     <!--choose this book to swap-->
