--- a/app/templates/edit_book.html
+++ b/app/templates/edit_book.html
@@ -60,7 +60,7 @@
     <p>$</p> <input type="number" step="0.05" name="fprice" value="{{book.price}}">
     
     <h3>Upload Images</h3>
-    <input type= "file" id="book_image" name="filename">
+    <input type= "file" id="book_image" name="file">
     <button type = "submit" formaction="{{ url_for('add_book')}}">Submit</button>
 </form>
 
