--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -23,7 +23,7 @@
     <div class="grid-container">
         {% for doc in docs %}
         <div class="grid-item">
-            <a href="{{ url_for('for_sale',bookid=doc._id)}}">{{doc.title}}</a>
+            <a href="{{ url_for('book_info',bookid=doc._id)}}">{{doc.title}}</a>
         </div>
         {%endfor%}
     </div>
