--- a/app/templates/view_swap.html
+++ b/app/templates/view_swap.html
@@ -2,7 +2,7 @@
 {% block container %}
 
 <div class="bookInfo">
-    <h1> Trade {{req.mybook.title}} </h3>
+    <h1> Trade {{mybook.title}} </h3>
     <img src = "data:image/png;base64, {{mybook.image_base64}}" width="500" height="500" />
     <h2>${{mybook.price}}</h2>
     <div class="bookDetails">
@@ -14,7 +14,7 @@
     </div>
 </div>
 <div class="bookInfo">
-    <h1> For {{req.otherbook.title}} </h1>
+    <h1> For {{otherbook.title}} </h1>
     <img src = "data:image/png;base64, {{otherbook.image_base64}}" width="500" height="500" />
     <h2>${{otherbook.price}}</h2>
     <div class="bookDetails">
