--- a/app/static/css/login.css
+++ b/app/static/css/login.css
@@ -6,7 +6,6 @@
     --lgreen: #4C4C4C;
 }
 
-
 body{
   font-size: 24px;
   font-family: 'Roboto', sans-serif;
@@ -113,7 +112,7 @@ body{
     margin-bottom:10px;
     margin-top:-25px;
     text-align: center;
-    color: var(--red);
+    color: red;
     font-style:italic;
     font-size: 0.88rem;
 }
