--- a/app/static/css/signup.css
+++ b/app/static/css/signup.css
@@ -111,7 +111,7 @@ body{
     margin-bottom:10px;
     margin-top:-25px;
     text-align: center;
-    color: var(--red);
+    color: red;
     font-style:italic;
     font-size: 0.88rem;
 }
