added email to registration

--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -19,6 +19,9 @@
             {% endif %}
 		</div>
 		<div>
+			<input class="signup-form-input" placeholder="Enter email" type="text" name="femail" value="">
+		</div>
+		<div>
 			<input class="signup-form-input" placeholder="Password(min 6 characters)"type="password" name="fpassword" value="">
             {% if blankerror%}
             <p id="passwordError" class="signup-form-error">{{ blankerror }}</p>
