add more metadata that show up only if present

--- a/app/templates/book_info.html
+++ b/app/templates/book_info.html
@@ -8,13 +8,35 @@
         <h2>Book Info:</h2>
         <h3>Title: {{book.title}}</h3>
         <h3>Edition: {{book.edition}}</h3>
+        {% if book.metadata.volumeInfo.authors %}
+        <h3>Author:
+            {% for author in book.metadata.volumeInfo.authors %}
+            {{author}}
+            {% endfor %}
+        </h3>
+        {% endif %}
+        {% if book.metadata.volumeInfo.categories %}
+        <h3>Category:
+            {% for category in book.metadata.volumeInfo.categories %}
+            {{category}}
+            {% endfor %}
+
+        </h3>
+        {% endif %}
         <h3>Publisher: {{book.publisher}}</h3>
         <h3>Condition: {{book.condition}}</h3>
-        <h3>Average Rating: {{book.metadata.volumeInfo.averageRating}}, {{book.metadata.volumeInfo.ratingsCount}} reviews</h3>
+        {% if book.metadata.volumeInfo.averageRating %}
+        <h3>Average Rating: {{book.metadata.volumeInfo.averageRating}}, {{book.metadata.volumeInfo.ratingsCount}}
+            reviews</h3>
+        {% endif %}
+        {% if book.metadata.volumeInfo.pageCount %}
         <h3>Page Count: {{book.metadata.volumeInfo.pageCount}}</h3>
+        {% endif %}
+        {% if book.metadata.volumeInfo.description %}
         <h3>Description: {{book.metadata.volumeInfo.description}}</h3>
+        {% endif %}
     </div>
-    
+
     {% if is_owner %}
     <form id="delbook" method="GET" action="{{ url_for('delete_book', bookid=book._id) }}">
         <input type="submit" name="delbookbtn" value="Delete Book Listing">
