--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -34,6 +34,7 @@
         <input type="text" name="publisher">
         <p> Publisher </p>
         <select name="condition" id="conditon">
+            <option value=""></option>
             <option value="New">New</option>
             <option value="Lightly Used">Lightly Used</option>
             <option value="Heavily Used">Heavily Used</option>
