--- a/app/static/css/home.css
+++ b/app/static/css/home.css
@@ -1,17 +1,50 @@
+:root{
+    --lpurple:#E6E6FA;
+    --mpurple: #5E2BFF;
+    --darkpurple: #8F00FF;
+    --purple: #8B80F9;
+    --gray: #4C4C4C;
+    --black: #282828;
+  }
+
 main {
+    font-size: 24px;
+    font-family: 'Roboto', sans-serif;
     justify-content: center;
     flex-wrap: wrap;
 }
 
+body{
+    font-size: 24px;
+    font-family: 'Roboto', sans-serif;
+}
+img{
+    width: 100%;
+    height:600px;
+    -webkit-filter: blur(2px);
+    filter: blur(2px);
+}
+
 #homepage-title {
+    font-family: 'Cormorant Garamond';
+    font-weight: 1rem;
+    position: absolute;
+    top: 200px;
+    left: 10px;
+    margin-left: 1rem;
+    margin-top: 2rem;
     flex-basis: 100%;
     text-align: center;
+    font-size: 3rem;
+    color: var(--black)
 }
 
 /***************** Search Form *****************/
 
 .search-form {
     display: flex;
+    flex-direction: column;
+    align-items:center;
     flex-wrap: wrap;
     justify-content: center;
     flex-basis: 100%;
